# localstack-playground

./: .gitignore  README.md  configure-localstack-profile.sh  deploy-apigateway.sh  deploy-lambda.sh  deploy-s3.sh  docker-compose.yml  lambda-input.json  minio_test.py  policy.json
lambda/: .gitignore  Pipfile  greeting.py
lambda/greeting/: build.sh  pyproject.toml  requirements.txt
lambda/greeting/src/: greeting.py
